# cse-230-final-project-connect4

./: .gitignore  README.md  connect4.cabal
src/connect4/: .Control.hs.swp  Control.hs  Main.hs  Model.hs  View.hs
src/connect4/Model/: Board.hs  Player.hs  Score.hs
src/connect4/UI/: EndMenu.hs  Instructions.hs  Loading.hs  MainMenu.hs  Play.hs  Resources.hs  Settings.hs
src/server/: Main.hs  README.md  Test.hs
tests/: Test.hs
websocket_test/: client.hi  client.hs  server.hi  server.hs  testingserver.hs
