name:                connect4
version:             0.1.0.0
license:             MIT
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable connect4
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick,
                       network,
                       websockets,
                       text
  hs-source-dirs:      src/connect4
  other-modules:       View, 
                       Control,
                       Model, 
                       Model.Board,
                       UI.MainMenu,
                       UI.Instructions,
                       UI.Loading,
                       UI.Play,
                       UI.EndMenu,
                       UI.Resources,
                       UI.Settings
           
  default-language:    Haskell2010
  ghc-options:       -W -threaded

executable connect4-server
  main-is:             Main.hs
  build-depends:       base >=4.9, 
                       random >=1.1 && <1.2,
                       containers,
                       vty, 
                       brick,
                       network,
                       websockets,
                       text
  hs-source-dirs:      src/server
  default-language:    Haskell2010
  ghc-options:       -W -threaded

test-suite tests
  default-language: Haskell98
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -threaded
  main-is:           Test.hs
  hs-source-dirs:    tests,
                     src/connect4
  other-modules:     Common
  build-depends:     base >=4.9, 
                     containers, 
                     mtl,
                     filepath,
                     QuickCheck,
                     tasty,
                     tasty-hunit,
                     tasty-quickcheck,
                     process,
                     vty, 
                     brick,
                     network,
                     websockets,
                     text
